bugfix: section components had justification issues on mobile.

--- a/shared/styles/game.less
+++ b/shared/styles/game.less
@@ -127,6 +127,8 @@ main {
       .container {
         flex-direction: column;
         -ms-flex-direction: column;
+        justify-content: flex-start;
+        -ms-flex-pack: start;
       }
 
       aside {
